--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,8 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <solid android:color="@color/white"/>
-    <corners android:radius="500dp"/>
+    <corners android:radius="16dp"/>
     <size android:width="75dp"
         android:height="75dp"/>
+    <padding android:left="4dp"
+        android:top="4dp"
+        android:right="4dp"
+        android:bottom="4dp" />
 
 </shape>
