--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,14 +32,15 @@
             android:text="@string/email_label"
             android:labelFor="@id/editTextTextEmailAddress"
             android:textSize="20sp"/>
+
         <EditText
             android:id="@+id/editTextTextEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:minHeight="50dp"
             android:autofillHints="emailAddress"
-            android:inputType="textEmailAddress" />
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:minHeight="50dp" />
 
         <TextView
             android:layout_width="wrap_content"
