--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="red">#ff0000</color>
     <color name="blue">#0000ff</color>
     <color name="text">#643120</color>
+    <color name="beige_brown">#BC9E82</color>
+    <color name="quite_brown">#A17246</color>
+    <color name="brown">#643120</color>
+    <color name="beige">#FFEBC9</color>
+    <color name="darker_gray">#AAA49E</color>
+
 </resources>
